--- a/duplicate.html
+++ b/duplicate.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+<img src="./img/success.jpg" style="position: fixed;width: 100%; opacity: 0.6; z-index: -100" alt="">
   <nav class="navbar navbar-default" style="opacity: 0.8">
       <div class="container">
           <div class="navbar-header">
@@ -51,16 +51,6 @@
       </div>
         </div>
       </div> <!-- /container -->
-      <?php include('footer.php') ?>
-      <aside id="aside" class="sidebar col-sm-3 col-md-2 hidden-print small">
-        <div class="sidebar-content">
-            <div class="sidebar-body collapse in">
-                <p>
-                    <img src="./img/success.jpg" style="position: fixed; bottom: -180px; left: -230px; opacity: 0.3; z-index: -100" alt="">
-                </p>
-            </div>
-        </div>
-    </aside>
     <!-- SCRIPTS -->
 
     <!-- JQuery -->
