--- a/duplicate.html
+++ b/duplicate.html
@@ -16,7 +16,7 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Material Design Bootstrap -->
-    <link href="./css/mdb-p.min.css" rel="stylesheet">
+    <link href="./css/mdb.min.css" rel="stylesheet">
 
 
 </head>
